k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tetris
  labels:
    app: tetris
    app.kubernetes.io/component: tetris
    app.kubernetes.io/instance: tetris
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: tetris
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: tetris
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: tetris
          image: REPLACE_IMAGE
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 3
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2023-12-15T02:20:31Z'
      lastTransitionTime: '2023-12-15T02:20:31Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2023-12-15T02:20:46Z'
      lastTransitionTime: '2023-12-15T02:20:29Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "tetris-5bc965779f" has successfully progressed.
