k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tetris
  labels:
    app: tetris
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    deployment: tetris
